re PR c++/20172 (Invalid non-type template parameters not diagnosed)

cp:
	PR c++/20172
	* pt.c (tsubst_template_parms): Check for invalid non-type
	parameters.
testsuite:
	PR c++/20172
	* g++.dg/template/nontype12.C : New test.

Co-Authored-By: Nathan Sidwell <nathan@codesourcery.com>

From-SVN: r101928